remove some more rotors specific stuff, fix manifest file

--- a/static/index.html
+++ b/static/index.html
@@ -25,10 +25,8 @@
       </div>
     </div>
     <div class="right">
-      <h3>Rotors</h3>
-      <p>Rotors is a simulation of a combination of rods and spinning discs, connected at various
-        points, with a pen at the end that draws on a piece of paper. To get an idea of what's
-        going on, you can enable the 'overlay' which will show the rods and discs.</p>
+      <h3>Wasm Animation Starter</h3>
+      <p>Template for creating animations in the browser using rust.</p>
       <div class="tabs"></div>
       <div class="config"></div>
     </div>
